integrate WebFlux